--- a/var-let-const.html
+++ b/var-let-const.html
@@ -17,7 +17,7 @@
  
     var age = 100;
     if (age > 12) {
-      var dogYears = age * 7;
+      let dogYears = age * 7;
       console.log(`You are ${dogYears} dog years old`);
     }
   </script>
