let used in block scope

--- a/var-let-const.html
+++ b/var-let-const.html
@@ -8,17 +8,13 @@
 </head>
 <body>
   <script>
-    var width;
-    function setWidth() {
-      width = 100;
-      console.log(width);
-    }
-    setWidth();
- 
-    var age = 100;
-    if (age > 12) {
-      let dogYears = age * 7;
-      console.log(`You are ${dogYears} dog years old`);
+    const key = 'abc123';
+    let points = 50;
+    let winner = false;
+
+    if(points > 40) {
+      console.log('it ran1');
+      let winner = true;
     }
   </script>
 </body>
