Object.freeze for const object

--- a/var-let-const.html
+++ b/var-let-const.html
@@ -12,10 +12,13 @@
     let points = 50;
     let winner = false;
 
-    if(points > 40) {
-      console.log('it ran1');
-      let winner = true;
+    const person = {
+      name: 'Wes',
+      age: 28
     }
+
+    const wes = Object.freeze(person);
+
   </script>
 </body>
-</html>
+</html>  
