Arrow functions syntax

--- a/Module 1: New Variables/var-let-const.html
+++ b/Module 1: New Variables/var-let-const.html
@@ -8,17 +8,8 @@
 </head>
 <body>
   <script>
-    {
-      const name = 'wes'; 
-      console.log(name);
-    }
-
-    for(let i = 0; i < 10; i++) {
-      console.log(i);
-      setTimeout(function() {
-        console.log('The number is ' + i);
-      }, 1000);
-    }
+    console.log(pizza);
+    var pizza = 'Deep Dish';
   </script>
 </body>
 </html>
