arrow functions with filter method

--- a/Module 2: Function Improvements/arrow-functions.html
+++ b/Module 2: Function Improvements/arrow-functions.html
@@ -17,6 +17,11 @@
 
     const win = winners.map((winner, i) => ({name: winner, race, place: i + 1}));
 
+    const ages = [23, 62, 45, 234, 2, 62, 234, 6892, 34];
+
+    const old = ages.filter(age => age >= 60);
+    console.log(old);
+
   </script>
 </body>
 </html>
